[tool.poetry]
name = "rl-algorithms"
version = "0.1.0"
description = ""
authors = ["Artur A. Galstyan <63471891+Artur-Galstyan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rl_algorithms"}]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.28.1"
equinox = "^0.10.2"
little-helper-functions = "^0.1.0"
tensorflow-probability = "^0.19.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
